[package]
name = "rustberrypi"
description = "Raspberry Pi GPIO interface"
version = "0.1.0"
authors = ["Michael O'Keeffe <michael.okeeffe@ninety47.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.20.0"
